--- a/Changes
+++ b/Changes
@@ -2,3 +2,7 @@
 
 Updated documentation to remind people that this must
 be the last Plugin in the chain (thanks Edward Rudd)
+
+0.03 Thu Nov 22 10:39:24 NZDT 2007
+
+In memory messages not deleted - thanks  Michael Scherer
